Fix wrong alignment for text in numberdetector.css and project.css

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -52,7 +52,6 @@
     display: block;
     width: 50px;
     height: 50px;
-    margin: auto;
     align-content: center;
     justify-items: center;
     border: 1px solid var(--background-color-5);
@@ -69,19 +68,18 @@
 .footer_link_icon > svg {
     height: 25px;
     width: 25px;
+    margin: auto;
+    align-self: center;
     transition: transform 0.35s ease, fill 0.35s ease;
 }
 
 .footer_link_icon:hover > svg {
     transform: scale(1.2);
+    fill: var(--font-color-2);
 }
 
 .footer_link_icon > svg {
     fill: var(--font-color-4);
-}
-
-.footer_link_icon > svg:hover {
-    fill: var(--font-color-2);
 }
 
 @media screen and (max-width: 966px) {
