--- a/styles/components/numberdetector.css
+++ b/styles/components/numberdetector.css
@@ -24,6 +24,8 @@
 }
 
 .number_detector_run_header_container {
+    display: flex;
+    justify-content: center;
     margin-bottom: 10px;
 }
 
