--- a/styles/components/project.css
+++ b/styles/components/project.css
@@ -613,6 +613,7 @@
 
 .project_info_features_content {
     display: grid;
+    align-items: center;
     grid-template-columns: repeat(auto-fit, minmax(calc(50% - 10px), 1fr));
     padding-block: 20px;
     gap: 10px;
